--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   id-token: write # This is required for requesting the JWT
+  contents: read
 
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
